fixing button on mobile

--- a/assets/css/hoabean.css
+++ b/assets/css/hoabean.css
@@ -15,6 +15,20 @@
     img{
         max-width: 75%;
     }
+    button {
+        border-radius: 20px;
+        padding: 1rem;
+        height: 20rem;
+        margin-bottom: 1cm;
+        font-family: 'Roboto', sans-serif;
+        font-size: 24px;
+        background-color: #3b220f;
+        color: white;
+        margin-bottom: 5rem;
+        border: none;
+    
+    }
+    
 }
 
 @media only screen and (min-width: 1000px) {
